Twote partial added

--- a/views/partials/twote-list.handlebars
+++ b/views/partials/twote-list.handlebars
@@ -1,12 +1,6 @@
 <ul id="partial-twote-list"> {{#each twotes}}
         <li>
-            <div class = "one-twote" >
-            	<div id="twote-content" class= "{{username._id}}">{{@key}}{{content}}</div>
-	            <div id="usernameTwote" class= "{{username._id}}"> -{{username.username}} </div>
-	            {{#unless notDeletable}}
-	            <input type="button" class = "delete" id="{{_id}}" value="X" /> 
-	            {{/unless}}
-	        </div>
+            {{> twote}}
         </li>     
     {{/each}}
 </ul>
