changed variable content to contentURL, clears form after a submit

--- a/views/partials/twote.handlebars
+++ b/views/partials/twote.handlebars
@@ -1,5 +1,5 @@
 <div class = "one-twote" >
-	<div id="twote-content" class= "{{username._id}}">{{@key}}{{content}}</div>
+	<div id="twote-content" class= "{{username._id}}">{{@key}}{{contentURL}}</div>
     <div id="usernameTwote" class= "{{username._id}}"> -{{username.username}} </div>
     {{#unless notDeletable}}
     <input type="button" class = "delete" id="{{_id}}" value="X" /> 
