--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -5,8 +5,8 @@
 
 <div class="new-twote">
 	<form id="twote-form" action="#">
-		<label for="twoteContent">New Twote:</label>
-	    <input id="twoteContent" name="twoteContent" type="text" class="required">
+		<label for="twoteContentURL">New Twote:</label>
+	    <input id="twoteContentURL" name="twoteContentURL" type="text" class="required">
 	    <input type="submit" id="submit" value="Submit" />
 
 	</form>
