changed variable to contentVidID, saving video IDs instead of URLS

--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -5,8 +5,8 @@
 
 <div class="new-twote">
 	<form id="twote-form" action="#">
-		<label for="twoteContentURL">New Twote:</label>
-	    <input id="twoteContentURL" name="twoteContentURL" type="text" class="required">
+		<label for="twoteContentVidID">New Twote:</label>
+	    <input id="twoteContentVidID" name="twoteContentVidID" type="text" class="required">
 	    <input type="submit" id="submit" value="Submit" />
 
 	</form>
