--- a/views/partials/twote.handlebars
+++ b/views/partials/twote.handlebars
@@ -1,5 +1,6 @@
 <div class = "one-twote" >
-	<div id="player"></div>
+	<div id="player">video goes here</div>
+	<div id="contentPrint">{{content}}</div>
     <div id="usernameTwote" class= "{{username._id}}"> -{{username.username}} </div>
     {{#unless notDeletable}}
     <input type="button" class = "delete" id="{{_id}}" value="X" /> 
@@ -7,34 +8,21 @@
 
     <!--stole this, replace with own code-->
     <script>
-    var tag = document.createElement('script');
+    // var tag = document.createElement('script');
 
-    tag.src = "https://www.youtube.com/iframe_api";
-    var firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    var player;
-
-    function onYouTubeIframeAPIReady() {
-    	player = new YT.Player('player', {
+    // tag.src = "https://www.youtube.com/iframe_api";
+    // var firstScriptTag = document.getElementsByTagName('script')[0];
+    // firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    
+    var player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'M7lc1UVf-VE',
+          videoId: content,
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
           }
-        });
-    }
-
-    player = new YT.Player('player', {
-          height: '390',
-          width: '640',
-          videoId: 'M7lc1UVf-VE',
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          }
-        });
+    });
 
     function onPlayerReady(event) {
         event.target.playVideo();
