--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,5 @@
 body {
-	background: #79CDCD;
+	background: #D9D9F3;
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 }
@@ -44,8 +44,8 @@ h1 {
 
 #submit {
   width: 60px;
-  height: 46px;
-  background: #E86C8D;
+  height: 25px;
+  background: #f2a4a4;
   font-family: inherit;
   font-weight: bold;
   color: inherit;
@@ -94,6 +94,7 @@ input:focus {
   	margin-bottom: 10px;
   	margin-top: 10px;
   	height: auto;
+    width: auto;
   	display: block;
   	padding: 20px;
 
@@ -141,14 +142,15 @@ input:focus {
 }
 
 #logout {
-	width: 60px;
-  	height: 46px;
-  	background: #E86C8D;
+	width: 80px;
+  	height: 40px;
+  	background: #f2a4a4;
   	font-family: inherit;
   	font-weight: bold;
+    font-size: 20px;
   	color: inherit;
   	letter-spacing: 1px;
-  	border-radius: 5px;
+    border-radius: 5px;
   	cursor: pointer;
   	display:inline-block;
   	float: right;
@@ -174,8 +176,8 @@ input:focus {
 
 .delete {
 	width: 60px;
-  	height: 46px;
-  	background: #E86C8D;
+  	height: 30px;
+  	background: #f2a4a4;
   	font-family: inherit;
   	font-weight: bold;
   	color: inherit;
@@ -183,7 +185,8 @@ input:focus {
   	cursor: pointer;
   	display:inline-block;
   	float: left;
-  	vertical-align: text-top;
+    border-radius: 5px;
+    margin-top: -10px;
 
 }
 
@@ -207,7 +210,7 @@ input:focus {
 	margin: auto;
 	width: auto;
   	height: 46px;
-  	background: #E86C8D;
+  	background: #f2a4a4;
   	font-family: inherit;
   	font-weight: bold;
   	color: inherit;
