--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -7,7 +7,7 @@
 	<form id="twote-form" action="#">
 		<label for="twoteContentVidID">New Twote:</label>
 	    <input id="twoteContentVidID" name="twoteContentVidID" type="text" class="required">
-	    <input type="submit" id="submit" value="Submit" />
+	    <input type="submit" id="submit" value="Send" />
 
 	</form>
 	<p id="current-user"> -{{currentUser}}</p>
