Static player workaround

--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -3,6 +3,10 @@
 	<input type="button" id="logout" value="Logout" /> 
 </div>
 
+<div id="upload_widget">
+	{{> upload_widget}}
+</div>
+
 <div class="new-twote">
 	<form id="twote-form" action="#">
 		<label for="twoteContentVidID">New Twote:</label>
