--- a/views/partials/twote.handlebars
+++ b/views/partials/twote.handlebars
@@ -6,9 +6,11 @@
     {{#unless notDeletable}}
     <input type="button" class = "delete" id="{{_id}}" value="Delete" /> 
     {{/unless}}
-
-    <!--stole this, replace with own code-->
     <script>
+
+    var widget;
+    var upload_player;
+    
     var url = $("#twote-content").attr("name");
     var indicatorString = "watch?v=";
     var indicatorStringIndex = url.indexOf(indicatorString);
@@ -16,49 +18,51 @@
     var content= url.substring(vidIDstart);
     console.log("content: "+content)
 
-    if (typeof(YT) == 'undefined' || typeof(YT.Player) == 'undefined') {
+    // if (typeof(YT) == 'undefined' || typeof(YT.Player) == 'undefined') {
 
-      var tag = document.createElement('script');
-      tag.src = "http://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    //   var tag = document.createElement('script');
+    //   tag.src = "http://www.youtube.com/iframe_api";
+    //   var firstScriptTag = document.getElementsByTagName('script')[0];
+    //   firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-      window.onYouTubePlayerAPIReady = function() {
-        makePlayer();
-      };
-      } 
-      else {
+    //   window.onYouTubePlayerAPIReady = function() {
+    //     makePlayer();
+    //     makeWidget();
+    //   };
+    //   } 
+    //   else {
 
-         makePlayer();
-    }
-    var player = null;
-    function makePlayer(){
-      	player = new YT.Player(url, {
-            height: '390',
-            width: '640',
-            videoId: content,
-            events: {
-              'onReady': onPlayerReady,
-              'onStateChange': onPlayerStateChange
-            }
-      });
-        console.log("made player")
-    }
+    //      makePlayer();
+    // }
+    
+    // makePlayer();
+    // function makePlayer(){
+    //   	player = new YT.Player(url, {
+    //         height: '390',
+    //         width: '640',
+    //         videoId: content,
+    //         events: {
+    //           'onReady': onPlayerReady,
+    //           'onStateChange': onPlayerStateChange
+    //         }
+    //   });
+    //     console.log("made player")
+    // }
 
-    function onPlayerReady(event) {
-        event.target.playVideo();
-    }
+    // function onPlayerReady(event) {
+    //     event.target.playVideo();
+    // }
 
-    var done = false;
-    function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
-    }
-    function stopVideo() {
-        player.stopVideo();
-    }
+    // var done = false;
+    // function onPlayerStateChange(event) {
+    //     if (event.data == YT.PlayerState.PLAYING && !done) {
+    //       setTimeout(stopVideo, 6000);
+    //       done = true;
+    //     }
+    // }
+    // function stopVideo() {
+    //     player.stopVideo();
+    // }
     </script>
 
 </div>
