Youtube does not do dynamic players well. Switching to static structure.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,4 +12,5 @@
 </body>
 <script type="text/javascript" src="javascripts/twotes.js"></script>
 <script type="text/javascript" src="javascripts/login.js"></script>
+<script type="text/javascript" src="javascripts/main.js"></script>
 </html>
