--- a/views/partials/twote-list.handlebars
+++ b/views/partials/twote-list.handlebars
@@ -1,5 +1,5 @@
 <ul id="partial-twote-list"> {{#each twotes}}
-        <li>
+        <li id="list_item">
             {{> twote}}
         </li>     
     {{/each}}
