--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -69,18 +69,19 @@ input:focus {
 
 .new-twote {
 	width: 353px;
-  	background: #FDFCFB;
-  	font-family: inherit;
-  	color: #303030;
-  	letter-spacing: 1px;
-  	text-indent: 5%;
-  	border-radius: 5px;
-  	margin: auto;
-  	margin-bottom: 10px;
-  	margin-top: 10px;
-  	height: auto;
-  	display: block;
-  	padding: 20px;
+	background: #FDFCFB;
+	font-family: inherit;
+	color: #303030;
+	letter-spacing: 1px;
+	text-indent: 5%;
+	border-radius: 5px;
+	margin: auto;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	height: auto;
+	display: block;
+	padding: 20px;
+  
 }
 
 .one-twote {
@@ -138,7 +139,7 @@ input:focus {
 
 #twotesPage-header {
 	text-align: left;
-  position: fixed;
+
   width: 100%;
 
 }
@@ -239,13 +240,27 @@ input:focus {
   max-height: 200px;
   float: right;
   padding-bottom: 30px; 
+  margin-top: 300px;
+  /*margin-right: 75px;*/
 }
 
 #vid_player {
   max-height: 390px;
   max-width: 640px;
+  margin-left: 350px;
 }
 
 #list_item {
   list-style-type: none;
+}
+
+#twoteContentVidID {
+  width: 300px;
+/*  height: 50px;*/
+}
+
+.video {
+  background: transparent;
+  border: none;
+  outline: none;
 }
