--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -7,7 +7,10 @@
 	{{> upload_widget}}
 </div>
 
+
 <div class="new-twote">
+	<button  type ="button" id="record-button"> Record a Video!</button>
+
 	<form id="twote-form" action="#">
 		<label for="twoteContentVidID">New Twote:</label>
 	    <input id="twoteContentVidID" name="twoteContentVidID" type="text" class="required">
@@ -16,6 +19,7 @@
 	</form>
 	<p id="current-user"> -{{currentUser}}</p>
 </div>
+
 
 
 <div id="twote-list">
