--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -77,10 +77,12 @@ input:focus {
 	border-radius: 5px;
 	margin: auto;
 	margin-bottom: 10px;
-	margin-top: 10px;
+	margin-top: 60px;
 	height: auto;
 	display: block;
 	padding: 20px;
+  float: left;
+  margin-left: 114px;
   
 }
 
@@ -172,13 +174,13 @@ input:focus {
 	display: inline-block;
 	float: left;
 	width: 65%;
-	padding-left: 0px;
+	padding-left:20px;
 }
 
 #user-list{
 	display: inline-block;
 	float: right;
-	width: 20%
+	width: 20%;
 }
 
 .delete {
@@ -240,9 +242,12 @@ input:focus {
   max-height: 200px;
   float: right;
   padding-bottom: 30px; 
-  margin-top: 300px;
+  margin-top: 390px;
+  margin-right: 114px; 
   /*margin-right: 75px;*/
 }
+
+
 
 #vid_player {
   max-height: 390px;
