minor bugfixes+add documentation

--- a/views/partials/twote-list.handlebars
+++ b/views/partials/twote-list.handlebars
@@ -1,3 +1,5 @@
+<!-- Partial that iterates through video links -->
+
 <ul id="partial-twote-list"> {{#each twotes}}
         <li id="list_item">
             {{> twote}}
