--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -1,3 +1,5 @@
+<!-- Page structure -->
+
 <div id="twotesPage-header">
 	<h1 id="Twoter-header">Twoter</h1>
 	<input type="button" id="logout" value="Logout" /> 
