adding placeholder text to form

--- a/views/twotes.handlebars
+++ b/views/twotes.handlebars
@@ -15,7 +15,7 @@
 
 	<form id="twote-form" action="#">
 		<label for="twoteContentVidID">New Twote:</label>
-	    <input id="twoteContentVidID" name="twoteContentVidID" type="text" class="required">
+	    <input id="twoteContentVidID" name="twoteContentVidID" type="text" class="required" placeholder="Paste in a Youtube URL">
 	    <input type="submit" id="submit" value="Send" />
 
 	</form>
